force-app/main/default/objects/Service_By_User_Type__mdt.object
<CustomObject>
    <description>This maps service classes to user types</description>
    <fields>
        <fullName>Service_Implementation_Class__c</fullName>
        <description>The name of the service implementation class to be invoked</description>
        <inlineHelpText>The name of the service implementation class to be invoked</inlineHelpText>
        <label>Service Implementation Class</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Interface__c</fullName>
        <description>Name of the service interface that is relevant for the implementation class</description>
        <inlineHelpText>Name of the service interface that is relevant for the implementation class</inlineHelpText>
        <label>Service Interface</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Permission__c</fullName>
        <description>The name of the permission linked to the particular service.</description>
        <inlineHelpText>The name of the permission linked to the particular service.</inlineHelpText>
        <label>User Permission</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Service By User Type</label>
    <pluralLabel>Services By User Types</pluralLabel>
</CustomObject>